--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,6 @@ env/
 *.swp
 *.swo
 *~
-.DS_Store
 
 # Jupyter Notebook
 .ipynb_checkpoints
@@ -25,6 +24,7 @@ env/
 # Environment variables
 .env
 .env.local
+.env*
 
 # FastAPI / Uvicorn
 *.log
@@ -56,3 +56,36 @@ dmypy.json
 *.tmp
 *.bak
 *.swp
+
+# ==============================================================================
+# Frontend / Node.js / Next.js (all paths relative to /frontend/)
+# ==============================================================================
+
+# Dependencies
+/frontend/node_modules/
+/frontend/.pnp
+/frontend/.pnp.*
+
+# Next.js
+/frontend/.next/
+/frontend/out/
+
+# Production build output (NOT Cody framework build folder)
+/frontend/build/
+/frontend/dist/
+
+# Testing
+/frontend/coverage/
+
+# Debug logs
+/frontend/npm-debug.log*
+/frontend/yarn-debug.log*
+/frontend/yarn-error.log*
+/frontend/.pnpm-debug.log*
+
+# TypeScript
+/frontend/*.tsbuildinfo
+/frontend/next-env.d.ts
+
+# Vercel
+/frontend/.vercel
