--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,10 @@ env/
 # Environment variables
 .env
 .env.local
-.env*
+.env.*.local
+
+# Allow .env.example to be committed
+!.env.example
 
 # FastAPI / Uvicorn
 *.log
